@@ -24,6 +24,9 @@ LDFLAGS=/nologo /DEBUG /DYNAMICBASE /NXCOMPAT /PDB:$(PDB) \
 $(BIN): $(OBJS)
 	link $(OBJS) /OUT:$(BIN) $(LDFLAGS)
 
+install:
+	python setup.py install
+
 clean:
-	del /F *.ilk *.obj *.dll *.lib *.pyd *.exp *.pdb
+	del /F *.ilk *.obj *.dll *.lib *.pyd *.exp *.pdb build
 
