@@ -1,0 +1,7 @@
+#!/usr/bin/env python
+from distutils.core import setup
+
+setup(name='pyxed', version='1.0', description='pyxed', author='huku',
+    author_email='huku@grhack.net', url='https://github.com/huku-/pyxed',
+    packages=[''], package_data={'': ['pyxed.so']})
+
