@@ -1,3 +1,8 @@
+2016-10-06 huku <huku@grhack.net>
+
+   * Added "setup.py" and modified makefiles accordingly.
+
+
 2016-05-24 huku <huku@grhack.net>
 
     * Updated Windows makefiles and uploaded new precompiled binaries.
